# audio-device-switcher

./: .gitignore  AudioDeviceSwitcher.csproj  CHANGELOG.md  CMakeLists.txt  LICENSE  Program.cs  README.md  RELEASE.md  TrayApplicationContext.cs  app.manifest  build.bat
.github/workflows/: build.yml  release.yml
res/: app.manifest  resource.h  resource.rc  resource.rc.in
src/: PolicyConfig.h  audio.cpp  audio.h  i18n.h  main.cpp  startup.cpp  startup.h  tray.cpp  tray.h
